docs: init authentification api documentation
